--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/pages/api/auth/[...nextauth].ts", "src/app/pages/auth/signin.tsx", "src/app/pages/auth/signup.tsx", "src/app/layout.tsx", "src/app/components/withAuth.tsx", "src/app/pages/sme-dashboard.jsx", "src/app/pages/api/users/index.ts"],
   "exclude": ["node_modules"]
 }
