--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-label": "^2.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "express-rate-limit": "^7.4.0",
     "firebase": "^10.12.2",
     "lucide-react": "^0.396.0",
     "next": "14.2.4",
@@ -28,7 +29,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
-    "@types/node": "^20.14.11",
+    "@types/node": "^20.14.14",
     "@types/nodemailer": "^6.4.15",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18",
