--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-label": "^2.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "drizzle-orm": "^0.32.2",
     "express-rate-limit": "^7.4.0",
     "firebase": "^10.12.2",
     "lucide-react": "^0.396.0",
@@ -37,6 +38,7 @@
     "@types/react-dom": "^18",
     "@types/speakeasy": "^2.0.10",
     "@types/uuid": "^10.0.0",
+    "drizzle-kit": "^0.23.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
