--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "migrate": "npx drizzle-kit generate -- dotenv_config_path='.env.local'",
-    "db-create": "npx drizzle-kit push -- dotenv_config_path='.env.local'"
+    "migrate": "npx drizzle-kit generate",
+    "db-create": "npx drizzle-kit push ",
+    "email": "email dev --dir src/app/emails"
   },
   "dependencies": {
     "@clerk/nextjs": "^5.2.14",
@@ -16,8 +17,10 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.17.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@react-email/components": "0.0.22",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
     "drizzle-orm": "^0.32.2",
     "express-rate-limit": "^7.4.0",
     "firebase": "^10.12.2",
@@ -27,6 +30,9 @@
     "nodemailer": "^6.9.14",
     "react": "^18",
     "react-dom": "^18",
+    "react-email": "2.1.6",
+    "react-to-print": "^2.15.1",
+    "resend": "^3.5.0",
     "speakeasy": "^2.0.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
