--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "@clerk/nextjs": "^5.2.14",
     "@neondatabase/serverless": "^0.9.4",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.17.0",
+    "@prisma/client": "^5.18.0",
     "@radix-ui/react-label": "^2.1.0",
     "@react-email/components": "0.0.22",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
@@ -50,7 +51,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
-    "prisma": "^5.17.0",
+    "prisma": "^5.18.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
