--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "@prisma/client": "^5.18.0",
     "@radix-ui/react-label": "^2.1.0",
     "@react-email/components": "0.0.22",
+    "@sendgrid/mail": "^8.1.3",
+    "@tensorflow/tfjs": "^4.20.0",
+    "aframe": "^0.1.3",
+    "aframe-extras": "^7.5.1",
+    "aframe-react": "^4.4.0",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -40,6 +45,7 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@types/aframe": "^1.2.7",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.14.14",
     "@types/nodemailer": "^6.4.15",
