--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "next": "14.2.4",
     "next-auth": "^4.24.7",
     "nodemailer": "^6.9.14",
+    "qrcode": "^1.5.4",
     "react": "^18",
     "react-dom": "^18",
     "react-email": "2.1.6",
