--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@react-email/components": "0.0.22",
     "@sendgrid/mail": "^8.1.3",
     "@tensorflow/tfjs": "^4.20.0",
-    "aframe": "^0.1.3",
+    "aframe": "^1.6.0",
     "aframe-extras": "^7.5.1",
     "aframe-react": "^4.4.0",
     "bcrypt": "^5.1.1",
@@ -51,6 +51,7 @@
     "@types/node": "^20.14.14",
     "@types/nodemailer": "^6.4.15",
     "@types/react": "^18.3.3",
+    "@types/react-chartjs-2": "^2.5.7",
     "@types/react-dom": "^18",
     "@types/speakeasy": "^2.0.10",
     "@types/uuid": "^10.0.0",
