--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,7 @@
         "src/app/styles/*"
       ],
       "@components/*": [
-        "src/app/components/*"
+        "src/components/*"
       ],
       "@constants/*": [
         "src/app/constants/*"
