--- a/package.json
+++ b/package.json
@@ -3,64 +3,65 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-      "dev": "next dev",
-      "build": "next build",
-      "start": "next start",
-      "lint": "next lint",
-      "migrate": "npx drizzle-kit generate",
-      "db-create": "npx drizzle-kit push ",
-      "email": "email dev --dir src/app/emails"
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "migrate": "npx drizzle-kit generate",
+        "db-create": "npx drizzle-kit push ",
+        "email": "email dev --dir src/app/emails"
     },
     "dependencies": {
-      "@clerk/nextjs": "^5.2.14",
-      "@neondatabase/serverless": "^0.9.4",
-      "@next-auth/prisma-adapter": "^1.0.7",
-      "@prisma/client": "^5.18.0",
-      "@radix-ui/react-label": "^2.1.0",
-      "@react-email/components": "0.0.22",
-      "@sendgrid/mail": "^8.1.3",
-      "@tensorflow/tfjs": "^4.20.0",
-      "aframe": "^1.6.0",
-      "aframe-extras": "^7.5.1",
-      "aframe-react": "^4.4.0",
-      "bcrypt": "^5.1.1",
-      "class-variance-authority": "^0.7.0",
-      "clsx": "^2.1.1",
-      "dotenv": "^16.4.5",
-      "drizzle-orm": "^0.32.2",
-      "express-rate-limit": "^7.4.0",
-      "firebase": "^10.12.2",
-      "lucide-react": "^0.396.0",
-      "next": "14.2.4",
-      "next-auth": "^4.24.7",
-      "nodemailer": "^6.9.14",
-      "qrcode": "^1.5.4",
-      "react": "^18",
-      "react-dom": "^18",
-      "react-email": "2.1.6",
-      "react-to-print": "^2.15.1",
-      "resend": "^3.5.0",
-      "speakeasy": "^2.0.0",
-      "tailwind-merge": "^2.3.0",
-      "tailwindcss-animate": "^1.0.7",
-      "uuid": "^10.0.0"
+        "@clerk/nextjs": "^5.2.14",
+        "@neondatabase/serverless": "^0.9.4",
+        "@next-auth/prisma-adapter": "^1.0.7",
+        "@prisma/client": "^5.20.0",
+        "@radix-ui/react-label": "^2.1.0",
+        "@react-email/components": "0.0.22",
+        "@sendgrid/mail": "^8.1.3",
+        "@tensorflow/tfjs": "^4.20.0",
+        "aframe": "^1.6.0",
+        "aframe-extras": "^7.5.1",
+        "aframe-react": "^4.4.0",
+        "bcrypt": "^5.1.1",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.1",
+        "dotenv": "^16.4.5",
+        "drizzle-orm": "^0.32.2",
+        "express-rate-limit": "^7.4.0",
+        "firebase": "^10.12.2",
+        "lucide-react": "^0.396.0",
+        "next": "14.2.4",
+        "next-auth": "^4.24.7",
+        "nodemailer": "^6.9.14",
+        "qrcode": "^1.5.4",
+        "react": "^18",
+        "react-dom": "^18",
+        "react-email": "2.1.6",
+        "react-to-print": "^2.15.1",
+        "resend": "^3.5.0",
+        "sme-matching": "file:",
+        "speakeasy": "^2.0.0",
+        "tailwind-merge": "^2.3.0",
+        "tailwindcss-animate": "^1.0.7",
+        "uuid": "^10.0.0"
     },
     "devDependencies": {
-      "@types/aframe": "^1.2.7",
-      "@types/bcrypt": "^5.0.2",
-      "@types/node": "^20.14.14",
-      "@types/nodemailer": "^6.4.15",
-      "@types/react": "^18.3.3",
-      "@types/react-chartjs-2": "^2.5.7",
-      "@types/react-dom": "^18",
-      "@types/speakeasy": "^2.0.10",
-      "@types/uuid": "^10.0.0",
-      "drizzle-kit": "^0.23.2",
-      "eslint": "^8",
-      "eslint-config-next": "14.2.4",
-      "postcss": "^8",
-      "prisma": "^5.18.0",
-      "tailwindcss": "^3.4.1",
-      "typescript": "^5"
+        "@types/aframe": "^1.2.7",
+        "@types/bcrypt": "^5.0.2",
+        "@types/node": "^20.14.14",
+        "@types/nodemailer": "^6.4.15",
+        "@types/react": "^18.3.3",
+        "@types/react-chartjs-2": "^2.5.7",
+        "@types/react-dom": "^18",
+        "@types/speakeasy": "^2.0.10",
+        "@types/uuid": "^10.0.0",
+        "drizzle-kit": "^0.23.2",
+        "eslint": "^8",
+        "eslint-config-next": "14.2.4",
+        "postcss": "^8",
+        "prisma": "^5.20.0",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5"
     }
-  }
+}
