--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "aframe-extras": "^7.5.1",
         "aframe-react": "^4.4.0",
         "bcrypt": "^5.1.1",
+        "chart.js": "^4.4.4",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "dotenv": "^16.4.5",
@@ -37,6 +38,7 @@
         "openai": "^4.67.3",
         "qrcode": "^1.5.4",
         "react": "^18",
+        "react-chartjs-2": "^5.2.0",
         "react-dom": "^18",
         "react-email": "2.1.6",
         "react-to-print": "^2.15.1",
