--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
         "express-rate-limit": "^7.4.0",
         "firebase": "^10.12.2",
         "lucide-react": "^0.396.0",
-        "next": "14.2.4",
-        "next-auth": "^4.24.7",
+        "next": "^15.0.3",
+        "next-auth": "^4.24.10",
         "nodemailer": "^6.9.14",
         "openai": "^4.67.3",
         "qrcode": "^1.5.4",
