--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
         "@radix-ui/react-slot": "^1.1.0",
         "@radix-ui/react-tooltip": "^1.1.4",
         "@react-email/components": "0.0.22",
+        "@react-three/drei": "^9.117.3",
+        "@react-three/fiber": "^8.17.10",
         "@sendgrid/mail": "^8.1.3",
         "@tensorflow/tfjs": "^4.20.0",
         "aframe": "^1.6.0",
@@ -48,12 +50,14 @@
         "react-chartjs-2": "^5.2.0",
         "react-dom": "^18",
         "react-email": "2.1.6",
+        "react-icons": "^5.3.0",
         "react-to-print": "^2.15.1",
         "resend": "^3.5.0",
         "sme-matching": "file:",
         "speakeasy": "^2.0.0",
         "tailwind-merge": "^2.5.4",
         "tailwindcss-animate": "^1.0.7",
+        "three": "^0.170.0",
         "uuid": "^10.0.0"
     },
     "devDependencies": {
