--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
         "@prisma/client": "^5.20.0",
         "@radix-ui/react-label": "^2.1.0",
         "@react-email/components": "0.0.22",
+        "@react-three/drei": "^9.117.3",
+        "@react-three/fiber": "^8.17.10",
         "@sendgrid/mail": "^8.1.3",
         "@tensorflow/tfjs": "^4.20.0",
+        "@types/three": "^0.170.0",
         "aframe": "^1.6.0",
         "aframe-extras": "^7.5.1",
         "aframe-react": "^4.4.0",
@@ -31,6 +34,7 @@
         "drizzle-orm": "^0.32.2",
         "express-rate-limit": "^7.4.0",
         "firebase": "^10.12.2",
+        "framer-motion": "^11.11.17",
         "lucide-react": "^0.396.0",
         "next": "^15.0.3",
         "next-auth": "^4.24.10",
@@ -41,12 +45,14 @@
         "react-chartjs-2": "^5.2.0",
         "react-dom": "^18",
         "react-email": "2.1.6",
+        "react-icons": "^5.3.0",
         "react-to-print": "^2.15.1",
         "resend": "^3.5.0",
         "sme-matching": "file:",
         "speakeasy": "^2.0.0",
         "tailwind-merge": "^2.3.0",
         "tailwindcss-animate": "^1.0.7",
+        "three": "^0.170.0",
         "uuid": "^10.0.0"
     },
     "devDependencies": {
